packages/coffee.chealt.com/src/components/scan/scan.css
#camera #video {
  display: block;
  width: 100%;
  height: 100vh;
  background-color: black;
}

#capture-button-container {
  position: absolute;
  text-align: center;
  bottom: var(--gap);
  width: 100%;
}

#capture-photo {
  padding: var(--gap--l);
  border-radius: 50%;
  background-color: crimson;
  border-color: white;
  border-width: 6px;
  border-style: double;
  width: auto;
}

#pictures {
  list-style: none;
  margin: 0;
  padding: 0;
}

#pictures li {
  margin: var(--gap) 0;
  padding: 0;
}

#pictures img {
  width: 100%;
}

#pictures .processing img::after {
  content: 'loading';
  width: 100%;
}

coffee-gallery .loading-ocr {
  display: none;
}

coffee-gallery.loading-ocr .loading-ocr {
  display: block;
}

#controls {
  box-shadow: 0px -8px 12px lightgray;
  position: fixed;
  bottom: 0;
  display: grid;
  width: 100%;
  box-sizing: border-box;
  grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
}

